refactor(tupi): Removing internal/resource.h, and making things movable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ set(SOURCES
   src/shader.cpp
   src/subpass_description.cpp
   src/swapchain.cpp
+  src/swapchain_image.cpp
   src/swapchain_support_detail.cpp)
 
 add_library(tupi ${SOURCES})
